--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "kcors": "^2.2.2",
     "koa": "^2.8.1"
   },
   "devDependencies": {
